added env vars
