# QuoteAPI/Program.cs
@@ -1,9 +1,9 @@
 using Microsoft.AspNetCore.Authentication.JwtBearer;
 using Microsoft.IdentityModel.Tokens;
+using QuoteAPI;
 using QuoteAPI.Helpers;
 using QuoteAPI.Middleware;
 using QuoteAPI.Services;
-using System.Diagnostics;
 using System.Text;
 
 var builder = WebApplication.CreateBuilder(args);
@@ -28,10 +28,10 @@ builder.Services.AddAuthentication(JwtBearerDefaults.AuthenticationScheme)
             ValidateAudience = true,
             ValidateLifetime = true,
             ValidateIssuerSigningKey = true,
-            ValidIssuer = builder.Configuration.Get<JWTAuthSettings>().Issuer,
-            ValidAudience = builder.Configuration.Get<JWTAuthSettings>().Issuer,
+            ValidIssuer = builder.Configuration.Get<JWTAuthSettings>().Issuer ?? Environment.GetEnvironmentVariable("JWTIssuer"),
+            ValidAudience = builder.Configuration.Get<JWTAuthSettings>().Issuer ?? Environment.GetEnvironmentVariable("JWTIssuer"),
             IssuerSigningKey = new SymmetricSecurityKey(Encoding.UTF8.GetBytes(
-                builder.Configuration.Get<JWTAuthSettings>().Key!))
+                (builder.Configuration.Get<JWTAuthSettings>().Key ?? Environment.GetEnvironmentVariable("JWTKey"))!))
         };
     });
 
@@ -43,15 +43,10 @@ builder.Services.AddTransient<IUserService, UserService>();
 builder.Services.AddControllers();
 // Learn more about configuring Swagger/OpenAPI at https://aka.ms/aspnetcore/swashbuckle
 builder.Services.AddEndpointsApiExplorer();
-builder.Services.AddSwaggerGen();
-//builder.Services.AddMvc()
-//        .AddSessionStateTempDataProvider();
-//builder.Services.AddSession(options =>
-//{
-//    options.IdleTimeout = TimeSpan.FromMinutes(30); //We set Time here 
-//    options.Cookie.HttpOnly = true;
-//    options.Cookie.IsEssential = true;
-//});
+builder.Services.AddSwaggerGen(c =>
+{
+    c.OperationFilter<SwaggerAuthorizationHeader>();
+});
 
 var app = builder.Build();
 
@@ -64,17 +59,7 @@ if (app.Environment.IsDevelopment())
 
 app.UseHttpsRedirection();
 
-//app.UseSession();
 app.UseAuth();
-//    .Use(async (context, next) =>
-//{
-//    var token = context.Session.GetString("Token");
-
-//    if (!string.IsNullOrEmpty(token))
-//        context.Request.Headers.Add("Authorization", "Bearer " + token);
-    
-//    await next();
-//});
 
 app.UseAuthorization();
 app.MapControllers();
